# rust-discord-bot

./: .env.template  .rust-analyzer.toml  Cargo.toml
src/: lib.rs  main.rs
src/controller/: ping_handler.rs
src/middleware/: discord_verify.rs  mod.rs
tests/: integration.rs
tests/e2e/: mod.rs  ping_handler_test.rs
tests/util/: discord_test_helper.rs  mod.rs
