[package]
name = "api-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tokio = { version = '1.0', features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "2.1"
hex = "0.4"
dotenv = "0.15"

[dev-dependencies]
tower = "0.5"
serial_test = "3.0"
http-body-util = "0.1"
futures-util = "0.3"
bytes = "1.0"
http-body = "1.0"
serde_json = "1.0"
